[project]
name = "py-utils"
version = "1.0.0"
description = "Tools for Captor clients."
authors = [
    { name = "Captor Tech", email = "tech@captor.se" },
]
maintainers = [
    { name = "Captor Tech", email = "tech@captor.se" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

dependencies = [
    "openseries (>=1.8.2)",
    "pyjwt (>=2.10.1)",
    "werkzeug (>=3.1.3)",
]

[project.urls]
repository = "https://github.com/CaptorAB/py-utils"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1,<6.0.0"
pytest = ">=8.2.2,<9.0.0"
pytest-cov = ">=5.0.0,<7.0.0"
pytest-xdist = ">=3.3.1,<5.0.0"
ruff = ">=0.12.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.coverage.run]
branch = true
omit = [
    "venv/*",
    "tests/*",
    "**/__init__.py",
    "./aster_short.py",
    "./dahlia_greenbond.py",
    "./iris_bond.py",
    "./portfoliosimulation.py",
    "./portfoliotool.py",
    "./use_graphql.py"
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
omit = [
    "**/__init__.py",
    "./aster_short.py",
    "./dahlia_greenbond.py",
    "./iris_bond.py",
    "./portfoliosimulation.py",
    "./portfoliotool.py",
    "./use_graphql.py"
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 87

[tool.ruff.lint]
select = ["ALL"]
allowed-confusables = ["−"]
ignore = ["COM812", "D203", "D213", "N999"]
fixable = ["ALL"]
mccabe = { max-complexity = 19 }
pydocstyle = { convention = "google" }
pylint = { max-args = 11, max-branches = 20, max-statements = 57 }

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:holidays.*"
]
