[project]
name = "py-utils"
version = "1.0.0"
description = "Tools for Captor clients."
authors = [
    { name = "Captor Tech", email = "tech@captor.se" },
]
maintainers = [
    { name = "Captor Tech", email = "tech@captor.se" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
package-mode = false

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

dependencies = [
    "openseries (>=2.1.6)",
    "pyjwt (>=2.11.0)",
    "werkzeug (>=3.1.5)",
    "jupyter >=1.1.1",
    "ipykernel (>=7.2.0)",
]

[project.urls]
repository = "https://github.com/CaptorAB/py-utils"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.5.1"
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
pytest-xdist = ">=3.8.0"
ruff = ">=0.15.2"

[build-system]
requires = ["poetry-core>=2.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.10"

[tool.coverage.run]
branch = true
omit = [
    "venv/*",
    "tests/*",
    "**/__init__.py",
    "./aster_long.py",
    "./aster_short.py",
    "./dahlia_greenbond.py",
    "./iris_bond.py",
    "./portfoliosimulation.py",
    "./portfoliotool.py",
    "./use_graphql.py"
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
omit = [
    "**/__init__.py",
    "./aster_long.py",
    "./aster_short.py",
    "./dahlia_greenbond.py",
    "./iris_bond.py",
    "./portfoliosimulation.py",
    "./portfoliotool.py",
    "./use_graphql.py"
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 87

[tool.ruff.lint]
select = ["ALL"]
allowed-confusables = ["−"]
ignore = ["COM812", "N999"]
fixable = ["ALL"]
mccabe = { max-complexity = 19 }
pydocstyle = { convention = "google" }
pylint = { max-args = 11, max-branches = 20, max-statements = 57 }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-n", "auto",
  "--dist=worksteal",
  "--cov=.",
  "--strict-markers",
  "--cov-fail-under=85",
  "--cov-branch",
  "--cov-report=term"
]
